--- a/test_mysql/Makefile
+++ b/test_mysql/Makefile
@@ -6,12 +6,16 @@ vitess_common_folder		= ./vitess/examples/common
 
 clone_vitess_repo = git clone git@github.com:vitessio/vitess.git
 
-set_alias_mysql_client = alias mysql="mysql -h 127.0.0.1 -P 15306 -u user"
-set_alias_vtctl_client = alias vtctlclient="vtctlclient -server=localhost:15999"
 
-select_commerce_data	=	mysql --table < $(vitess_operator_folder)/select_commerce_data.sql
+mysql_client_alias	=	mysql -h 127.0.0.1 -P 15306 -u user
+vtctl_client_alias	=	vtctlclient -server=localhost:15999
 
-show_vitess_tablets		=	echo "show vitess_tablets;" | mysql --table
+
+show_vitess_tablets			=	echo "show vitess_tablets;" | $(mysql_client_alias) --table
+show_user_table_describe	=	echo "describe user;" | $(mysql_client_alias) --table
+
+init_Schema_users_table	= $(vtctl_client_alias) ApplySchema -sql="$(cat database/init_users.sql)" usersdb
+init_VSchema_usersdb	= $(vtctl_client_alias) ApplyVSchema -vschema="$(cat database/vschema_database_users.json)" usersdb
 
 .PHONY: set_aliases
 
@@ -21,12 +25,8 @@ start_minikube:
 clone_vitess_github:
 	$(clone_vitess_github)
 
-set_aliases:
-	$(set_alias_mysql_client)
-	$(set_alias_vtctl_client)
-
 show_vitess_tablets:
 	$(show_vitess_tablets)
 
-select_commerce_data:
-	$(select_commerce_data)
+show_user_table_describe:
+	$(show_user_table_describe)
