Addition of the region sharding upgraded files

--- a/test_mysql/Makefile
+++ b/test_mysql/Makefile
@@ -27,6 +27,7 @@ SHARD_INIT_USERS_VSCHEMA					= $(VTCTL_CLIENT) ApplyVSchema -vschema='$(shell ca
 SHARD_INIT_RESHARD_USERS					= $(VTCTL_CLIENT) Reshard $(V_KEYSPACE_USERS).user2user '-' '-80,80-'
 SHARD_VERIFY_USERS_SHARDING_PROCESS			= $(VTCTL_CLIENT) VDiff $(V_KEYSPACE_USERS).user2user
 SHARD_SWITCH_READ_REPLICA_USERS				= $(VTCTL_CLIENT) SwitchReads -tablet_type=replica $(V_KEYSPACE_USERS).user2user
+SHARD_SWITCH_READ_RDONLY_USERS				= $(VTCTL_CLIENT) SwitchReads -tablet_type=rdonly $(V_KEYSPACE_USERS).user2user
 SHARD_SWITCH_WRITE_USERS					= $(VTCTL_CLIENT) SwitchWrites $(V_KEYSPACE_USERS).user2user
 
 
@@ -71,6 +72,7 @@ resharding_process_users:
 	$(SHARD_INIT_RESHARD_USERS)
 	$(SHARD_VERIFY_USERS_SHARDING_PROCESS)
 	$(SHARD_SWITCH_READ_REPLICA_USERS)
+	$(SHARD_SWITCH_READ_RDONLY_USERS)
 	$(SHARD_SWITCH_WRITE_USERS)
 
 reshard_users_db:
