--- a/mysql/kubernetes/init_cluster_vitess_sharded.yaml
+++ b/mysql/kubernetes/init_cluster_vitess_sharded.yaml
@@ -7,6 +7,7 @@ spec:
     vtctld: vitess/lite:v6.0.20-20200429
     vtgate: vitess/lite:v6.0.20-20200429
     vttablet: vitess/lite:v6.0.20-20200429
+    vtorc: vitess/orchestrator:v3.2.3
     vtbackup: vitess/lite:v6.0.20-20200429
     mysqld:
       mysql56Compatible: vitess/lite:v6.0.20-20200429
@@ -54,6 +55,19 @@ spec:
       - name: vitess-region-config-volume
         configMap:
           name: vitess-cluster-config-sharding
+  vitessOrchestrator:
+    cells:
+      - zone1
+    configSecret:
+      name: vitess-cluster-secret
+      key: orc_config.json
+    replicas: 1
+    resources:
+      limits:
+        memory: 128Mi
+      requests:
+        cpu: 100m
+        memory: 128Mi
   keyspaces:
     - name: users
       turndownPolicy: Immediate
