--- a/mysql/Makefile
+++ b/mysql/Makefile
@@ -4,6 +4,7 @@
 ##
 
 V_KEYSPACE_USERS	= users
+V_KEYSPACE_ARTICLES	= articles
 V_KEYSPACE_CONFIG	= config
 
 DATABASE_FOLDER_PATH	= ./database
@@ -16,23 +17,29 @@ MYSQL_CLIENT	=	mysql -h 127.0.0.1 -P 15306 -u user
 VTCTL_CLIENT	=	vtctlclient -server=localhost:15999
 
 # Unsharded commands
-INIT_USERS_TABLES	= $(VTCTL_CLIENT) ApplySchema -sql="$(shell cat $(DATABASE_FOLDER_PATH)/init/init_users.sql)" $(V_KEYSPACE_USERS)
-INIT_USERS_VSCHEMA	= $(VTCTL_CLIENT) ApplyVSchema -vschema='$(shell cat $(DATABASE_FOLDER_PATH)/vschema/vschema_users_initial.json)' $(V_KEYSPACE_USERS)
+INIT_USERS_TABLES	= $(VTCTL_CLIENT) ApplySchema -sql="$(shell cat $(DATABASE_FOLDER_PATH)/users/init/init_users.sql)" $(V_KEYSPACE_USERS)
+INIT_USERS_VSCHEMA	= $(VTCTL_CLIENT) ApplyVSchema -vschema='$(shell cat $(DATABASE_FOLDER_PATH)/users/vschema/vschema_users_initial.json)' $(V_KEYSPACE_USERS)
 
 # Sharded commands
-SHARD_INIT_CONFIG_USERS_SEQUENCES_SQL		= $(VTCTL_CLIENT) ApplySchema -sql="$(shell cat $(DATABASE_FOLDER_PATH)/init/init_users_seq.sql)" $(V_KEYSPACE_CONFIG)
-SHARD_INIT_CONFIG_USERS_SEQUENCES_VSCHEMA	= $(VTCTL_CLIENT) ApplyVSchema -vschema='$(shell cat $(DATABASE_FOLDER_PATH)/vschema/vschema_config_seq.json)' $(V_KEYSPACE_CONFIG)
-SHARD_ALTER_USERS_TABLES_SQL				= $(VTCTL_CLIENT) ApplySchema -sql="$(shell cat $(DATABASE_FOLDER_PATH)/init/alter_users_tables_sharding.sql)" $(V_KEYSPACE_USERS)
-SHARD_INIT_USERS_VSCHEMA					= $(VTCTL_CLIENT) ApplyVSchema -vschema='$(shell cat $(DATABASE_FOLDER_PATH)/vschema/vschema_users_shard.json)' $(V_KEYSPACE_USERS)
+## Config
+SHARD_INIT_CONFIG_SEQUENCES_SQL		= $(VTCTL_CLIENT) ApplySchema -sql="$(shell cat $(DATABASE_FOLDER_PATH)/config/init/init_increment_seq.sql)" $(V_KEYSPACE_CONFIG)
+SHARD_INIT_CONFIG_SEQUENCES_VSCHEMA	= $(VTCTL_CLIENT) ApplyVSchema -vschema='$(shell cat $(DATABASE_FOLDER_PATH)/config/vschema/vschema_config_seq.json)' $(V_KEYSPACE_CONFIG)
+
+## Users
+SHARD_ALTER_USERS_TABLES_SQL				= $(VTCTL_CLIENT) ApplySchema -sql="$(shell cat $(DATABASE_FOLDER_PATH)/users/init/alter_user_auto_increment.sql)" $(V_KEYSPACE_USERS)
+SHARD_INIT_USERS_VSCHEMA					= $(VTCTL_CLIENT) ApplyVSchema -vschema='$(shell cat $(DATABASE_FOLDER_PATH)/users/vschema/vschema_users_shard.json)' $(V_KEYSPACE_USERS)
 SHARD_INIT_RESHARD_USERS					= $(VTCTL_CLIENT) Reshard $(V_KEYSPACE_USERS).user2user '-' '-80,80-'
 SHARD_VERIFY_USERS_SHARDING_PROCESS			= $(VTCTL_CLIENT) VDiff $(V_KEYSPACE_USERS).user2user
 SHARD_SWITCH_READ_REPLICA_USERS				= $(VTCTL_CLIENT) SwitchReads -tablet_type=replica $(V_KEYSPACE_USERS).user2user
 SHARD_SWITCH_READ_RDONLY_USERS				= $(VTCTL_CLIENT) SwitchReads -tablet_type=rdonly $(V_KEYSPACE_USERS).user2user
 SHARD_SWITCH_WRITE_USERS					= $(VTCTL_CLIENT) SwitchWrites $(V_KEYSPACE_USERS).user2user
 
+## Articles
+### TODO: add articles commands
+
 # Region sharding commands
-REGION_SHARD_INIT_CONFIG_USERS_VSCHEMA			= $(VTCTL_CLIENT) ApplyVSchema -vschema='$(shell cat $(DATABASE_FOLDER_PATH)/vschema/region/vschema_users_shard_region.json)' $(V_KEYSPACE_USERS)
-REGION_SHARD_INIT_CONFIG_USER_LOOKUP_VINDEX		= $(VTCTL_CLIENT) CreateLookupVindex -tablet_types=REPLICA $(V_KEYSPACE_USERS) '$(shell cat $(DATABASE_FOLDER_PATH)/vschema/region/vschema_users_shard_lookup_vindex.json)'
+REGION_SHARD_INIT_CONFIG_USERS_VSCHEMA			= $(VTCTL_CLIENT) ApplyVSchema -vschema='$(shell cat $(DATABASE_FOLDER_PATH)/users/vschema/region/vschema_users_shard_region.json)' $(V_KEYSPACE_USERS)
+REGION_SHARD_INIT_CONFIG_USER_LOOKUP_VINDEX		= $(VTCTL_CLIENT) CreateLookupVindex -tablet_types=REPLICA $(V_KEYSPACE_USERS) '$(shell cat $(DATABASE_FOLDER_PATH)/users/vschema/region/vschema_users_shard_lookup_vindex.json)'
 REGION_SHARD_EXTERNALIZE_USER_LOOKUP_VINDEX		= $(VTCTL_CLIENT) ExternalizeVindex $(V_KEYSPACE_USERS).user_region_lookup
 
 GET_USERS_VSCHEMA	= $(VTCTL_CLIENT) GetVSchema $(V_KEYSPACE_USERS)
@@ -41,7 +48,7 @@ list_vtctld:
 	kubectl get pods --selector="planetscale.com/component=vtctld" -o custom-columns=":metadata.name"
 
 start_minikube:
-	minikube start --cpus=12 --memory=14000 --disk-size=80g
+	minikube start --cpus=12 --memory=10000 --disk-size=80g
 
 start_minikube_dashboard:
 	minikube dashboard
@@ -64,10 +71,9 @@ init_unsharded_database:
 	$(INIT_USERS_TABLES)
 	$(INIT_USERS_VSCHEMA)
 
-init_users_increment_sequence:
-	$(SHARD_INIT_CONFIG_USERS_SEQUENCES_SQL)
-	$(SHARD_INIT_CONFIG_USERS_SEQUENCES_VSCHEMA)
-	$(INIT_USERS_VSCHEMA)
+init_config_increment_sequence:
+	$(SHARD_INIT_CONFIG_SEQUENCES_SQL)
+	$(SHARD_INIT_CONFIG_SEQUENCES_VSCHEMA)
 	$(SHARD_ALTER_USERS_TABLES_SQL)
 	$(SHARD_INIT_USERS_VSCHEMA)
 
@@ -104,11 +110,11 @@ show_vitess_tablets:
 	echo "show vitess_tablets;" | $(MYSQL_CLIENT) --table
 
 insert_few_user_row:
-	$(MYSQL_CLIENT) < ./database/insert/insert_data_users.sql
+	$(MYSQL_CLIENT) < ./database/users/insert/insert_data_users.sql
 
 show_user_table:
-	@$(MYSQL_CLIENT) --table < ./database/select/select_user.sql
-	@$(MYSQL_CLIENT) --table < ./database/select/select_user_shard_1.sql
-	@$(MYSQL_CLIENT) --table < ./database/select/select_user_shard_2.sql
+	@$(MYSQL_CLIENT) --table < ./database/users/select/select_user.sql
+	@$(MYSQL_CLIENT) --table < ./database/users/select/select_user_shard_1.sql
+	@$(MYSQL_CLIENT) --table < ./database/users/select/select_user_shard_2.sql
 
 .PHONY: set_aliases
